// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders checkout link 1`] = `
<nav
  className="nv-s nv-s--sticky"
  data-jsx={792433154}
>
  <div
    className="nv-s-l bar"
    data-jsx={792433154}
  >
    <a
      className="nv-s-l-b back-link"
      data-jsx={792433154}
      href="/death/checkout"
      onClick={[Function]}
    >
      Checkout
    </a>
    <a
      className="cart-link"
      data-jsx={792433154}
      href="/death/checkout"
      onClick={[Function]}
    >
      0
    </a>
  </div>
</nav>
`;

exports[`rendering renders lookup link 1`] = `
<nav
  className="nv-s nv-s--sticky"
  data-jsx={792433154}
>
  <div
    className="nv-s-l bar"
    data-jsx={792433154}
  >
    <a
      className="nv-s-l-b back-link"
      data-jsx={792433154}
      href="/death"
      onClick={[Function]}
    >
      Back to Lookup
    </a>
    <a
      className="cart-link"
      data-jsx={792433154}
      href="/death/checkout"
      onClick={[Function]}
    >
      0
    </a>
  </div>
</nav>
`;
